# nixthon

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
docs/: cli.md
src/nixthon/: cli.py  core.py  main.py
src/template/: shell.nix
tests/: test_core.py  test_main.py
