[project]
name = "nixthon"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
authors = [
    { name = "Patarimi", email = "38954040+Patarimi@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cyclopts>=4.4.1",
]

[project.scripts]
nixthon = "nixthon.cli:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
doc = [
    "cyclopts[mkdocs]>=4.4.1",
    "mkdocs>=1.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli_level = "ERROR"
log_file_level = "INFO"
log_file = "./pytest.log"